# antarctic_AR_dataset

./: .gitignore  README.md  dataset_construction.ipynb  environment.yml  myst.yml  pyproject.toml
artools/: __init__.py  attribute_utils.py  compute_attributes_streaming.py  display_utils.py  format_utils.py  loading_utils.py
artools/cloud/: __init__.py  accumulators.py  aggregation_registry.py  auth.py  catalog.py  orchestrator.py  spatial_functions.py  worker.py
artools/st_dbscan/: __init__.py  st_dbscan.py  utils.py
deployment/lambda/: Dockerfile.arm64  Dockerfile.x86_64  build.sh  build_layers.sh
deployment/lithops/: Dockerfile.arm64  Dockerfile.x86_64  build_runtimes.sh  lithops_config.yaml
notebooks/: catalog_construction.ipynb  cmmt_comparison.ipynb  dataset_construction.ipynb  dataset_explorations.ipynb  paper_plots.ipynb  qa_case_studies.ipynb  qa_sensitivity_testing.ipynb
notebooks/quality_assurance/: cmmt_comparison.ipynb  qa_aggregates.ipynb  qa_case_studies.ipynb  qa_flickering_investigations.ipynb  qa_sensitivity_testing.ipynb
scripts/: build_climatology.py  clustering.py  run_cloud_attributes.py
scripts/slurm_scripts/: run_minpts_perturb.sh  run_optimal_clustering.sh  run_reppts_perturb.sh  run_seed_perturb.sh  run_space_perturb.sh  run_time_perturb.sh
