[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artools"
version = "0.0.1"
authors = [
  { name="James Butler" },
]
description = "Tools and routines for constructing and managing datasets of Antarctic ARs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "xarray",
    "ray",
    "requests",
    "matplotlib",
    "earthaccess",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/my_package_name"
"Bug Tracker" = "https://github.com/yourusername/my_package_name/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["artools*"]